--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,31 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+html, body, ion-app, ion-content {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overscroll-behavior: none;
+  background: var(--ion-background-color, #fff);
+}
+
+body {
+  overflow: hidden; // Evita scroll do navegador
+  touch-action: manipulation; // Melhora resposta ao toque
+}
+
+ion-content {
+  --padding-top: 0;
+  --padding-bottom: 0;
+  --padding-start: 0;
+  --padding-end: 0;
+  --background: var(--ion-background-color, #fff);
+}
+
+// Remove highlight azul ao tocar em links no Android
+* {
+  -webkit-tap-highlight-color: transparent;
+}
