--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -2,16 +2,9 @@
 <html lang="pt">
   <div class="container">
     <app-header></app-header>
+    <app-footer></app-footer>
   </div>  
 
-
-  <ion-content [fullscreen]="true">
-    <ion-header collapse="condense">
-      <ion-toolbar>
-        <ion-title size="large">main</ion-title>
-      </ion-toolbar>
-    </ion-header>
-  </ion-content>
 </html>
 
 
