refactor: movimentando o header e o footer para o local correto, e fazendo ajustes de css para encaixar a tela conforme um celular

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,3 +117,12 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+
+app-header, app-footer {
+  width: 100%;
+  max-width: 414px; 
+  margin: 0 auto;
+  display: block;
+  position: relative;
+  z-index: 10;
+}
