--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ion-app>
+  <app-header></app-header>
   <ion-split-pane contentId="main-content">
-    
     <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+  </ion-split-pane>  
+  <app-footer></app-footer>
 </ion-app>
