--- a/src/app/main/main.page.scss
+++ b/src/app/main/main.page.scss
@@ -1,15 +1,26 @@
-/* Layout principal */
 .container {
+    width: 100%;
     max-width: 414px;
     margin: 0 auto;
     padding: 16px;
     display: flex;
     flex-direction: column;
     gap: 16px;
+    min-height: 100vh;
 }
 
-/* Mensagens */
 .messages {
     padding: 16px;
     border-radius: 8px;
+}
+
+.cards {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 16px;
+  min-height: 0; 
 }
