--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <ion-footer>
   <ion-toolbar>
-    <ion-segment mode="md" value="home" style="width: 100%; justify-content: space-around; display: flex;">
+    <ion-segment mode="md" [value]="selected" (ionChange)="onSegmentChange($event)">
       <ion-segment-button value="home">
         <ion-icon name="home-outline"></ion-icon>
         <ion-label>Home</ion-label>
