--- a/src/app/books/list/list.component.html
+++ b/src/app/books/list/list.component.html
@@ -12,25 +12,28 @@
       style="margin-bottom: 12px;">
     </ion-searchbar>
     <ion-list>
-      <ion-item *ngFor="let book of filteredBooks" lines="none" class="list-card">
-        <ion-label>
-          <div class="book-title">{{ book.titulo }}</div>
-          <div class="book-author">{{ book.autor }}</div>
-          <div class="book-rating">
-            <ng-container *ngFor="let star of [1,2,3,4,5]; let i = index">
-              <ion-icon
-                [name]="book.nota >= i + 1 ? 'star' : (book.nota >= i + 0.5 ? 'star-half' : 'star-outline')"
-                style="font-size: 1.1em;">
-              </ion-icon>
-            </ng-container>
-            <span class="book-rating-value">{{ book.nota }}</span>
-          </div>
-          <div class="book-available">
-            Disponível: {{ book.quantidade }} {{ book.quantidade === 1 ? 'unidade' : 'unidades' }}
-          </div>
-        </ion-label>
-        <ion-button (click)="presentAlert(book)" slot="end" color="primary" class="alugar-btn">Alugar</ion-button>
-      </ion-item>
+      <ng-container *ngFor="let book of filteredBooks">
+        <ion-item *ngIf="book.quantidade > 0"
+                  lines="none" class="list-card">
+          <ion-label>
+            <div class="book-title">{{ book.titulo }}</div>
+            <div class="book-author">{{ book.autor }}</div>
+            <div class="book-rating">
+              <ng-container *ngFor="let star of [1,2,3,4,5]; let i = index">
+                <ion-icon
+                  [name]="book.nota >= i + 1 ? 'star' : (book.nota >= i + 0.5 ? 'star-half' : 'star-outline')"
+                  style="font-size: 1.1em;">
+                </ion-icon>
+              </ng-container>
+              <span class="book-rating-value">{{ book.nota }}</span>
+            </div>
+            <div class="book-available">
+              Disponível: {{ book.quantidade }} {{ book.quantidade === 1 ? 'unidade' : 'unidades' }}
+            </div>
+          </ion-label>
+          <ion-button (click)="presentAlert(book)" slot="end" color="primary" class="alugar-btn">Alugar</ion-button>
+        </ion-item>
+      </ng-container>
     </ion-list>
   </ion-card-content>
 </ion-card>
