feat: implementando a capacidade de renovar o emprestimo de um livro

--- a/src/app/profile/loans/loans.component.html
+++ b/src/app/profile/loans/loans.component.html
@@ -28,7 +28,7 @@
           </span>
         </ng-template>
         <div style="margin-top: 8px;" *ngIf="loan.multa === 0">
-          <ion-button size="small" color="primary" fill="solid">Renovar</ion-button>
+          <ion-button (click)="renovarEmprestimo(loan)"size="small" color="primary" fill="solid">Renovar</ion-button>
         </div>
         <div *ngIf="!last" style="height: 12px;"></div>
       </div>
