feat: implementando o histórico de empréstimos e feature de pegar um livro emprestado novamente

--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -2,7 +2,7 @@
 
     <div class="cards">
       <app-card></app-card>
-      <app-loans></app-loans>
+      <app-select-loans></app-select-loans>
     </div>
 
   </div>
